All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/SM_Appointment_Window__c.object-meta.xml
<CustomObject>
    <label>Appointment Window</label>
    <nameField>
        <label>Appointment Window Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>