All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Appointment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to &quot;Appointment Type&quot; record type</description>
    <label>Appointment Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SM_Appointment_Window__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Appointment Type</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SM_Appointment_Window__c</referenceTo>
    <relationshipLabel>Appointment Windows</relationshipLabel>
    <relationshipName>Appointment_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>