All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Appointment_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Appointment_Type_Description__c</fullName>
    <description>Description of the appointment type</description>
    <label>Appointment Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>