All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Appointment_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Appointment_Type_Name__c</fullName>
    <description>Name of the appointment type</description>
    <label>Appointment Type Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>