All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>SM_Time_Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to &quot;Time Window&quot; record type</description>
    <label>Time Window</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SM_Appointment_Window__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Time Window</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SM_Appointment_Window__c</referenceTo>
    <relationshipLabel>Appointment Windows (Time Window)</relationshipLabel>
    <relationshipName>Appointment_Windows1</relationshipName>
    <type>Lookup</type>
</CustomField>