All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Time_Window_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Time_Window_Name__c</fullName>
    <description>Field to store Time Window name</description>
    <label>Time Window Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>