All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/fields/SM_Window_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SM_Window_Start_Time__c</fullName>
    <description>Start time of a Time Window in hh:mm format</description>
    <label>Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>