All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/recordTypes/Appointment_Type.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Type</fullName>
    <active>true</active>
    <label>Appointment Type</label>
</RecordType>