All_Component_DX/force-app/main/default/objects/SM_Appointment_Window__c/recordTypes/Time_Window.recordType-meta.xml
<RecordType>
    <fullName>Time_Window</fullName>
    <active>true</active>
    <label>Time Window</label>
</RecordType>